Test rendering animals